--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_travel_package_list_row.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_travel_package_list_row.xml
@@ -20,6 +20,7 @@
         android:layout_alignParentLeft="true"
         android:ellipsize="end"
         android:padding="10dp"
+        android:textAllCaps="true"
         android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_18"
