--- a/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_hall_list_row_layout.xml
+++ b/branch/B-3.0.62.0_1.0.3_(MATA)_Date_01-Aug-2014/MaxisGetIt/res/layout/activity_matta_hall_list_row_layout.xml
@@ -19,18 +19,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="30"
+            android:layout_weight="21.5"
             android:contentDescription="@string/hall_img"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:src="@drawable/group_load" />
+            android:src="@drawable/hall_loading" />
 
         <TextView
             android:id="@+id/home_title_field"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="70"
+            android:layout_weight="78.5"
             android:ellipsize="end"
             android:paddingLeft="10dp"
             android:singleLine="true"
